[style] : Fix styles in TripCard.js and LocationCard. Images now do not overflow the main container.

--- a/src/common/LocationCard/LocationCard.css
+++ b/src/common/LocationCard/LocationCard.css
@@ -35,8 +35,10 @@
 }
 
 .card-all-locations-image {
-  width: 100%;
+  height: 20em;
+  max-width: 100%;
   border-radius: 0.5em;
+  margin-top: 1em;
 }
 
 .card-all-locations__content {
@@ -84,6 +86,11 @@
 @media screen and (max-width: 768px) {
   .container-location {
     grid-template-columns: repeat(1, 1fr);
+  }
+
+  .card-all-locations-image {
+    height: auto;
+    width: 100%;
   }
 }
 
